# SAIR_Jr

./: .gitignore  README.md  pyproject.toml
0_Python and Data Science Tools/: README.md
1_Regression/: Lecture_1.ipynb  Lecture_2.ipynb  Lecture_3.ipynb  README.md
1_Regression/.gradio/flagged/: dataset1.csv
1_Regression/Regression Capstone Projects/: Mlutiple _Linear_ Regression .ipynb  Simple linear regression For Advertising .ipynb
1_Regression/Regression Capstone Projects/Awab.project/: .gitignore  Mecidal_Insurance_cost_proj.ipynb
1_Regression/Regression Capstone Projects/Mohammed_Kamal/: Gas_Price_Analysis.ipynb  Medical_Insurance_Cost.ipynb  README.md  app.py
2_Classification/: Lecture_4.ipynb  Lecture_5.ipynb  README.md
3_Neural Network from scratch/: README.md
4_Applied Deep Learning with PyTorch/: README.md
4_Applied Deep Learning with PyTorch/3_Sequence and NLP/: 7_Seq_to_Seq.ipynb
4_Applied Deep Learning with PyTorch/lab_assignments/: .gitignore
4_Applied Deep Learning with PyTorch/lab_assignments/Eithar_Ismail/: 3_CNN_Edited.ipynb  lab_2.ipynb  lab_3.ipynb  lab_4.ipynb
4_Applied Deep Learning with PyTorch/lab_assignments/abdelhadi_osama/: lab_1.ipynb  (+3 more)
4_PyTorch/: .gitignore
4_PyTorch/2_Vision_and_CNN/: 5A_YOLO.ipynb  5B_Segment_Pose.ipynb  new.ipynb
4_PyTorch/3_Sequence_and_NLP/: 6_Intro_to_Seq.ipynb  7_Seq_to_Seq.ipynb  8A_HuggingFace_Ecosystem.ipynb  8B_HuggingFace_Finetuning.ipynb  dev.ipynb
5_GPT from scratch/: 0.Introduction.md  1.DATA.ipynb  2.ATTENTION.ipynb  3.GPT.ipynb  README.md  dev.ipynb  gpt_viz.py  model.py
(+9 files in other folders)
