[project]
name = "sair"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.6.0",
    "diffusers>=0.36.0",
    "evaluate>=0.4.6",
    "gensim>=4.4.0",
    "gradio>=5.49.1",
    "ipywidgets>=8.1.7",
    "kaggle>=1.7.4.5",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "mlflow>=3.5.0",
    "nbconvert>=7.16.6",
    "nltk>=3.9.2",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pytest>=9.0.1",
    "roboflow>=1.2.13",
    "sacremoses>=0.1.1",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.3",
    "sentencepiece>=0.2.1",
    "streamlit>=1.50.0",
    "tensorflow>=2.21.0",
    "tiktoken>=0.12.0",
    "timm>=1.0.24",
    "transformers>=4.57.6",
    "ultralytics>=8.4.14",
    "xgboost>=3.1.1",
]
